--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Testing Sprint Challenge",
 	"main": "index.js",
 	"scripts": {
+		"server": "nodemon index.js",
 		"test": "jest --watch --verbose",
 		"start": "nodemon index.js"
 	},
@@ -19,7 +20,9 @@
 	},
 	"homepage": "https://github.com/LambdaSchool/Sprint-Challenge--Testing#readme",
 	"dependencies": {
-		"express": "^4.16.4"
+		"dotenv": "^8.0.0",
+		"express": "^4.16.4",
+		"nodemon": "^1.19.1"
 	},
 	"devDependencies": {
 		"jest": "^23.6.0",
