--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"server": "nodemon index.js",
-		"test": "jest --watch --verbose",
+		"test": "cross-env DB_ENV=testing jest --watch",
 		"start": "nodemon index.js"
 	},
 	"repository": {
@@ -20,9 +20,12 @@
 	},
 	"homepage": "https://github.com/LambdaSchool/Sprint-Challenge--Testing#readme",
 	"dependencies": {
+		"cross-env": "^5.2.0",
 		"dotenv": "^8.0.0",
 		"express": "^4.16.4",
-		"nodemon": "^1.19.1"
+		"knex": "^0.17.6",
+		"nodemon": "^1.19.1",
+		"sqlite3": "^4.0.9"
 	},
 	"devDependencies": {
 		"jest": "^23.6.0",
